<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_lihat_catatan"
            android:icon="@drawable/ic_playlist_add_check_black_24dp"
            android:title="@string/lihat_catatan" />
        <item
            android:id="@+id/nav_tambah_catatan"
            android:icon="@drawable/ic_playlist_add_black_24dp"
            android:title="@string/tambah_catatan" />
    </group>

    <item android:title=" ">
        <menu>
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_exit_to_app_black_24dp"
                android:title="@string/logout" />
        </menu>
    </item>

</menu>
