<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    >

    <data>
        <variable
            name="presenter"
            type="galih.binar.bukucatatantoko.Presenter.LoginPresenter"/>
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary"
        tools:context="galih.binar.bukucatatantoko.View.LoginActivity">

        <ImageView
            android:layout_marginBottom="20dp"
            android:layout_centerInParent="true"
            android:layout_above="@id/act_login_form_wrapper"
            android:src="@drawable/logo"
            android:layout_width="300dp"
            android:layout_height="100dp" />

        <LinearLayout
            android:id="@+id/act_login_form_wrapper"
            android:padding="10dp"
            android:background="@android:color/white"
            android:orientation="vertical"
            android:layout_centerInParent="true"
            android:layout_marginHorizontal="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <EditText
                android:text="@={presenter.credential.email}"
                android:inputType="textEmailAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:text="@string/password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <EditText
                android:text="@={presenter.credential.password}"
                android:inputType="textPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <Button
                android:onClick="@{()-> presenter.doLogin()}"
                android:textColor="@android:color/white"
                android:text="@string/login"
                android:background="@color/colorPrimary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>

    </RelativeLayout>
</layout>
